--- a/index.html
+++ b/index.html
@@ -378,17 +378,18 @@
 			<div class="row">
 				<div class="col-6">
 					<div>
-						<p class="text-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est ipsa quo illum temporibus fuga, porro dicta quia delectus! Error, quidem.</p>
+						<p class="text-content" style="margin-top: 30px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est ipsa quo illum temporibus fuga, porro dicta quia delectus! Error, quidem.</p>
 					</div>
 					<div>
-						<p class="text-content">122 33rd Street East</p>
-						<p class="text-content">Saskatoon,SK</p>
-						<p class="text-content">SK179</p>
+						<p class="text-content" style="margin-bottom: 1px;">122 33rd Street East</p>
+						<p class="text-content"  style="margin-bottom: 1px;">Saskatoon,SK</p>
+						<p class="text-content"  style="margin-bottom: 1px;">SK179</p>
 					</div>
+					<br>
 					<div>
 						<div style="display: flex; color: #c5c7c8;">
 							<span>Email:</span>
-							<p style="margin-left: 30px;" class="text-content">info@focal.com</p>
+							<p style="margin-left: 30px;margin-bottom: 1px;" class="text-content">info@focal.com</p>
 						</div>
 						<div style="display: flex; color: #c5c7c8;">
 							<span>Phone:</span>
